--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -12,6 +12,7 @@
   <PropertyGroup>
     <StartupObject>Game.App</StartupObject>
     <Authors>RJ</Authors>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Fonts\clacon.ttf" />
@@ -38,7 +39,6 @@
     <Resource Include="Icons\WorldMap.png" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Elysium.Theme" Version="2.0.4" />
     <PackageReference Include="MaterialDesignThemes" Version="4.1.0" />
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.2.237901">
       <PrivateAssets>all</PrivateAssets>
