--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -15,7 +15,6 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Core\Dialog\DialogSequences\example.spd" />
     <None Remove="Core\Mission\Dictionaries\bigNames.txt" />
     <None Remove="Core\Mission\Dictionaries\example.spd" />
     <None Remove="Core\Mission\Dictionaries\smallNames.txt" />
@@ -44,9 +43,6 @@
     <None Remove="Icons\WorldMapPixels.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Core\Dialog\DialogSequences\example.spd">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Core\Mission\Dictionaries\steal_0.spd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -124,6 +120,10 @@
 	  <Page Update="UI\LocalConsole.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Core\Dialog\DialogSequences\" />
 	</ItemGroup>
   <Import Project="..\packages\CefSharp.Common.91.1.230\build\CefSharp.Common.targets" Condition="Exists('..\packages\CefSharp.Common.91.1.230\build\CefSharp.Common.targets')" />
 </Project>
