--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -15,6 +15,12 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Core\Dialog\DialogSequences\**" />
+    <EmbeddedResource Remove="Core\Dialog\DialogSequences\**" />
+    <None Remove="Core\Dialog\DialogSequences\**" />
+    <Page Remove="Core\Dialog\DialogSequences\**" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Core\Mission\Dictionaries\bigNames.txt" />
     <None Remove="Core\Mission\Dictionaries\example.spd" />
     <None Remove="Core\Mission\Dictionaries\smallNames.txt" />
@@ -161,10 +167,6 @@
 	  <Page Update="UI\LocalConsole.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Core\Dialog\DialogSequences\" />
 	</ItemGroup>
   <Import Project="..\packages\CefSharp.Common.91.1.230\build\CefSharp.Common.targets" Condition="Exists('..\packages\CefSharp.Common.91.1.230\build\CefSharp.Common.targets')" />
 </Project>
